# museion

./: .gitignore  README.md  pyproject.toml  ucli
data/: coco.sh
src/museion/: _types.py  cli.py  dataloader.py
